--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1103,29 +1103,13 @@
                         <div class="pyq-count">2000 Questions</div>
                     </div>
                     
-                    <div class="pyq-card" onclick="window.open('#', '_blank')">
+                    <div class="pyq-card" onclick="window.open('history-all-pyg-syllabus-subject-chaperwise-english.html', '_blank')">
     <div class="pyq-icon"><i class="fas fa-landmark"></i></div>
     <div class="pyq-title">Ancient Indian History</div>
-    <div class="pyq-count">750+ Questions</div>
+    <div class="pyq-count">3500+ Questions</div>
 </div>
 
-<div class="pyq-card" onclick="window.open('#', '_blank')">
-    <div class="pyq-icon"><i class="fas fa-fort-awesome"></i></div>
-    <div class="pyq-title">Medieval Indian History</div>
-    <div class="pyq-count">780+ Questions</div>
-</div>
 
-<div class="pyq-card" onclick="window.open('#', '_blank')">
-    <div class="pyq-icon"><i class="fas fa-flag"></i></div>
-    <div class="pyq-title">Modern Indian History</div>
-    <div class="pyq-count">750+ Questions</div>
-</div>
-
-<div class="pyq-card" onclick="window.open('#', '_blank')">
-    <div class="pyq-icon"><i class="fas fa-globe-asia"></i></div>
-    <div class="pyq-title">World History</div>
-    <div class="pyq-count">750+ Questions</div>
-</div>
 
 <div class="pyq-card" onclick="window.open('#', '_blank')">
     <div class="pyq-icon"><i class="fas fa-mountain"></i></div>
