--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1105,7 +1105,7 @@
                     
                     <div class="pyq-card" onclick="window.open('history-all-pyg-syllabus-subject-chaperwise-english.html', '_blank')">
     <div class="pyq-icon"><i class="fas fa-landmark"></i></div>
-    <div class="pyq-title">Ancient Indian History</div>
+    <div class="pyq-title">History Over-All</div>
     <div class="pyq-count">3500+ Questions</div>
 </div>
 
@@ -1113,26 +1113,22 @@
 
 <div class="pyq-card" onclick="window.open('#', '_blank')">
     <div class="pyq-icon"><i class="fas fa-mountain"></i></div>
-    <div class="pyq-title">Indian Geography</div>
-    <div class="pyq-count">700+ Questions</div>
+    <div class="pyq-title">Geography-Over-All</div>
+    <div class="pyq-count">3000+ Questions</div>
 </div>
 
-<div class="pyq-card" onclick="window.open('#', '_blank')">
-    <div class="pyq-icon"><i class="fas fa-globe"></i></div>
-    <div class="pyq-title">World Geography</div>
-    <div class="pyq-count">700+ Questions</div>
-</div>
+
 
 <div class="pyq-card" onclick="window.open('#', '_blank')">
     <div class="pyq-icon"><i class="fas fa-balance-scale"></i></div>
     <div class="pyq-title">Indian Polity & Constitution/Governance and indian Sociaty</div>
-    <div class="pyq-count">2000+ Questions</div>
+    <div class="pyq-count">4000+ Questions</div>
 </div>
 
 <div class="pyq-card" onclick="window.open('#', '_blank')">
     <div class="pyq-icon"><i class="fas fa-chart-line"></i></div>
-    <div class="pyq-title">Indian Economy</div>
-    <div class="pyq-count">1500+ Questions</div>
+    <div class="pyq-title">Economics</div>
+    <div class="pyq-count">3500+ Questions</div>
 </div>
 
 <div class="pyq-card" onclick="window.open('#', '_blank')">
