--- a/history-all-pyg-syllabus-subject-chaperwise-english.html
+++ b/history-all-pyg-syllabus-subject-chaperwise-english.html
@@ -3,7 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>STISkilli – Custom Units Pro</title>
+    <title>STISkilli History PYQ – Ancient, Medieval, Modern, World & Art Previous Year Questions</title>
+
+<script src="/app-redirect.js"></script>
+
+<meta name="description" content="Practice STISkilli History PYQ with Ancient, Medieval, Modern, World History & Art Previous Year Questions. Premium AI-powered preparation for competitive exams, government jobs & GK in India.">
+
+<meta name="keywords" content="History PYQ, Ancient History PYQ, Medieval History PYQ, Modern History PYQ, World History PYQ, Art & Culture PYQ, Competitive Exam History, STISkilli">
+
+<meta name="author" content="StiSkilli">
+<meta name="publisher" content="StiSkilli">
+<meta name="brand" content="StiSkilli App">
+<meta name="topic" content="History Previous Year Questions, Competitive Exams, Education">
+
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+<meta name="googlebot" content="index, follow">
+
+<!-- VIEWPORT -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
+<!-- CANONICAL (APP LINK USED) -->
+<link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura">
+
+<!-- =========================
+     OPEN GRAPH (FB / INSTA / WHATSAPP)
+========================== -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="STISkilli History PYQ – Previous Year Questions">
+<meta property="og:description" content="Solve History Previous Year Questions (PYQ) with STISkilli – Ancient, Medieval, Modern, World & Art. AI-powered exam prep app.">
+<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share">
+<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+<meta property="og:site_name" content="StiSkilli">
+
+<!-- =========================
+     TWITTER / X SEO
+========================== -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="STISkilli History PYQ – Exam Preparation App">
+<meta name="twitter:description" content="Best AI-powered History PYQ App for Competitive Exams & Government Jobs in India.">
+<meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+
+<!-- =========================
+     APP DEEP LINK SEO
+========================== -->
+<meta name="application-name" content="StiSkilli">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="theme-color" content="#F4C430">
+
+<!-- ANDROID APP INDEXING -->
+<link rel="alternate" href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
+
+<!-- =========================
+     AI SEARCH ENTITY SIGNAL
+========================== -->
+<meta name="ai-content-declaration" content="This page provides History Previous Year Questions (PYQ) inside the STISkilli AI Career & Exam Preparation App.">
+
+<!-- =========================
+     STRUCTURED DATA (JSON-LD)
+========================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": ["MobileApplication","LearningResource","EducationalOrganization"],
+  "name": "STISkilli History PYQ",
+  "description": "History Previous Year Questions (PYQ) covering Ancient, Medieval, Modern, World History and Art for Competitive Exams.",
+  "educationalLevel": "Competitive Exam Preparation",
+  "publisher": {
+    "@type": "Organization",
+    "name": "StiSkilli"
+  },
+  "operatingSystem": "Android",
+  "applicationCategory": "EducationApplication",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "INR"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.9",
+    "ratingCount": "100000"
+  },
+  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura"
+}
+</script>
+
+<!-- =========================
+     PERFORMANCE & AI SEARCH
+========================== -->
+<meta name="referrer" content="strict-origin-when-cross-origin">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="format-detection" content="telephone=no">
+
+<!-- =========================
+     FAVICON
+========================== -->
+<link rel="icon" href="https://play-lh.googleusercontent.com/your-app-icon.png" type="image/png">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script> 
