--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         // Agar image file missing ho toh default image dikhayein
         bgImgElement.onerror = () => {
             console.error("Image not found:", randomImage);
-            bgImgElement.src = "skilligovtbck.png"; // Make sure this file exists
+            bgImgElement.src = ""; // Make sure this file exists
             bgImgElement.style.opacity = "0.85";
         };
 
