--- a/history-all-pyg-syllabus-subject-chaperwise-english.html
+++ b/history-all-pyg-syllabus-subject-chaperwise-english.html
@@ -8,9 +8,6 @@
 <meta name="description" content="Practice STISkilli History PYQ with Ancient, Medieval, Modern, World History & Art Previous Year Questions. Premium AI-powered preparation for competitive exams, government jobs & GK in India.">
 <meta name="keywords" content="History PYQ, Ancient History PYQ, Medieval History PYQ, Modern History PYQ, World History PYQ, Art & Culture PYQ, Competitive Exam History, STISkilli">
 <meta name="author" content="StiSkilli">
-<meta name="publisher" content="StiSkilli">
-<meta name="brand" content="StiSkilli App">
-<meta name="topic" content="History Previous Year Questions, Competitive Exams, Education">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="googlebot" content="index, follow">
 <!-- VIEWPORT -->
@@ -18,11 +15,11 @@
 <!-- CANONICAL (APP LINK USED) -->
 <link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura">
 <!-- =========================
-     OPEN GRAPH (FB / INSTA / WHATSAPP)
+     OPEN GRAPH (SOCIAL SEO)
 ========================== -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="STISkilli History PYQ – Previous Year Questions">
-<meta property="og:description" content="Solve History Previous Year Questions (PYQ) with STISkilli – Ancient, Medieval, Modern, World & Art. AI-powered exam prep app.">
+<meta property="og:title" content="StiSkilli – Smart Career & Exam Guide 2026">
+<meta property="og:description" content="Download SkillAura AI App for Government Exams, AI Tools, Job Alerts, Education News & Career Guidance. One App – All Future Solutions.">
 <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share">
 <meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <meta property="og:site_name" content="StiSkilli">
@@ -30,8 +27,8 @@
      TWITTER / X SEO
 ========================== -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="STISkilli History PYQ – Exam Preparation App">
-<meta name="twitter:description" content="Best AI-powered History PYQ App for Competitive Exams & Government Jobs in India.">
+<meta name="twitter:title" content="StiSkilli – Future Career & Exam Guide">
+<meta name="twitter:description" content="AI powered Government Exam, Job & Career Guide App. Download SkillAura AI from Google Play Store.">
 <meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <!-- =========================
      APP DEEP LINK SEO
@@ -42,28 +39,17 @@
 <meta name="theme-color" content="#F4C430">
 <!-- ANDROID APP INDEXING -->
 <link rel="alternate" href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
-
-<!-- =========================
-     AI SEARCH ENTITY SIGNAL
-========================== -->
-<meta name="ai-content-declaration" content="This page provides History Previous Year Questions (PYQ) inside the STISkilli AI Career & Exam Preparation App.">
-
 <!-- =========================
      STRUCTURED DATA (JSON-LD)
 ========================== -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": ["MobileApplication","LearningResource","EducationalOrganization"],
-  "name": "STISkilli History PYQ",
-  "description": "History Previous Year Questions (PYQ) covering Ancient, Medieval, Modern, World History and Art for Competitive Exams.",
-  "educationalLevel": "Competitive Exam Preparation",
-  "publisher": {
-    "@type": "Organization",
-    "name": "StiSkilli"
-  },
+  "@type": "MobileApplication",
+  "name": "StiSkilli",
   "operatingSystem": "Android",
   "applicationCategory": "EducationApplication",
+  "description": "StiSkilli is a smart Tech-powered career & exam guidance app for Government Jobs, AI Tools, Education, Private Jobs and Latest Recruitment in India.",
   "offers": {
     "@type": "Offer",
     "price": "0",
@@ -89,12 +75,10 @@
      FAVICON
 ========================== -->
 <link rel="icon" href="https://play-lh.googleusercontent.com/your-app-icon.png" type="image/png">
-    
+
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800;900&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">ht@500;600;700;800&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800;900&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
     <style>
         /* --- THEME VARIABLES --- */
         :root {
