--- a/history-all-pyg-syllabus-subject-chaperwise-english.html
+++ b/history-all-pyg-syllabus-subject-chaperwise-english.html
@@ -608,28 +608,28 @@
                 tag: "DISCOVERY",
                 title: "New Harappan Site Found in Gujarat",
                 desc: "Archaeologists have unearthed a massive settlement near Dholavira, revealing advanced drainage systems.",
-                image: "https://images.unsplash.com/photo-1605634289895-46740b206124?q=80&w=2070&auto=format&fit=crop",
+                image: "skillinewsbck.png",
                 link: "page_harappa_news.html" 
             },
             {
                 tag: "RESEARCH",
                 title: "Decoding the Indus Script",
                 desc: "AI models suggest new patterns in the undeciphered symbols of the Indus Valley Civilization.",
-                image: "https://images.unsplash.com/photo-1628155930542-4d7a78370960?q=80&w=2070&auto=format&fit=crop",
+                image: "skillinewsbck.png",
                 link: "page_ai_script.html" 
             },
             {
                 tag: "EVENT",
                 title: "World History Conference 2026",
                 desc: "Join the biggest virtual gathering of historians this March. Exclusive access for Premium members.",
-                image: "https://images.unsplash.com/photo-1544928147-79a2dbc1f389?q=80&w=1974&auto=format&fit=crop",
+                image: "skillinewsbck.png",
                 link: "page_conference.html" 
             },
             {
                 tag: "MYSTERY",
                 title: "The Lost Library of Nalanda",
                 desc: "A deep dive into what was lost and what remains of the ancient university's vast knowledge.",
-                image: "https://images.unsplash.com/photo-1590076215667-875d4ef2d743?q=80&w=2070&auto=format&fit=crop",
+                image: "skillinewsbck.png",
                 link: "page_nalanda.html" 
             }
         ];
