--- a/history-all-pyg-syllabus-subject-chaperwise-english.html
+++ b/history-all-pyg-syllabus-subject-chaperwise-english.html
@@ -390,6 +390,7 @@
             <div id="nav-world" class="dock-item" onclick="openCategory('world', this)"><i class="fas fa-globe"></i></div>
             <div id="nav-art" class="dock-item" onclick="openCategory('art', this)"><i class="fas fa-palette"></i></div>
             <div id="nav-news" class="dock-item" onclick="openCategory('news', this)"><i class="fas fa-newspaper"></i></div>
+            
         </nav>
     </div>
 
@@ -582,9 +583,12 @@
         const APP_NAME = "STISkilli"; 
 
         // !!! CHANGE THESE VALUES TO RENAME CATEGORY HEADINGS !!!
+        // THIS WILL CHANGE:
+        // 1. POPUP TITLE
+        // 2. PROFILE LOG TITLE (AUTOMATICALLY)
         const CATEGORY_TITLES = {
-            ancient: "HULIHULI",   // Aap change kar sakte hai: "PRACHIN BHARAT"
-            medieval: "MEDIEVAL HISTORY", // Aap change kar sakte hai: "MADHYAKALIN BHARAT"
+            ancient: "HULIHULI",   // Change here
+            medieval: "MEDIEVAL HISTORY",
             modern: "MODERN HISTORY",
             world: "WORLD HISTORY",
             art: "ART & CULTURE",
@@ -610,12 +614,12 @@
             { tag: "MYSTERY", title: "The Lost Library of Nalanda", desc: "A deep dive into what was lost and what remains of the ancient university's vast knowledge.", image: "skillinewsbck.png", link: "page_nalanda.html" }
         ];
 
+
         // --- QUIZ DATA WITH EXPLANATIONS ---
         const quizDatabase = {
             ancient: [
                 { 
-                    name: "1857 REVOLUTION OF INDIA", 
-                    questions: [ 
+                    name: "1857 REVOLUTION OF INDIA", questions: [ 
                         { q: "Oldest Veda?", options: ["Rigveda", "Samaveda", "Yajur", "Atharva"], ans: 0, explanation: "The Rigveda is the oldest known Vedic Sanskrit text. It is a collection of 1,028 hymns and 10,600 verses, organized into ten books (Mandalas)." }, 
                         { q: "Great Bath found in?", options: ["Harappa", "Mohenjodaro", "Lothal", "Kalibangan"], ans: 1, explanation: "The Great Bath is one of the most well-known structures among the ruins of the ancient Indus Valley Civilization at Mohenjo-daro in Sindh, Pakistan." } 
                     ] 
@@ -1015,7 +1019,7 @@
             overlay.style.display = 'flex';
         }
 
-        // --- 6. PROFILE & LOGIC ---
+        // --- 6. PROFILE & LOGIC (UPDATED WITH DYNAMIC NAMING) ---
         function initProfileView() {
             if (hasPaid()) {
                 showStep(4);
@@ -1035,6 +1039,9 @@
 
             for (const cat in progressData) {
                 if(!quizDatabase[cat]) continue;
+                
+                // --- NEW FIX: Get Display Name from CATEGORY_TITLES ---
+                const displayCategoryName = CATEGORY_TITLES[cat] || cat.toUpperCase();
 
                 for (const uIdx in progressData[cat]) {
                     const d = progressData[cat][uIdx];
@@ -1051,7 +1058,7 @@
                         container.innerHTML += `
                         <div class="pp-item">
                             <div class="pp-top">
-                                <span class="pp-title">${cat.toUpperCase()} / ${uName}</span>
+                                <span class="pp-title">${displayCategoryName} / ${uName}</span>
                                 <span class="pp-score">${d.score.toFixed(1)} PTS</span>
                             </div>
                             <div class="pp-bar-bg">
