--- a/history-all-pyg-syllabus-subject-chaperwise-english.html
+++ b/history-all-pyg-syllabus-subject-chaperwise-english.html
@@ -422,7 +422,7 @@
 
             <div id="explanation-overlay">
                 <div class="expl-box" id="expl-box">
-                    <div id="expl-icon" class="expl-icon">✅</div>
+                    <div id="expl-icon" class="expl-icon"></div>
                     <div id="expl-title" class="expl-title">CORRECT!</div>
                     <div id="expl-text" class="expl-text">
                         Detailed explanation goes here...
@@ -931,13 +931,13 @@
             const explanation = qObj.explanation || "Detailed historical context for this answer is currently being updated in our archives.";
 
             if(isCorrect) {
-                icon.innerHTML = "✅";
+                icon.innerHTML = "";
                 title.innerText = "CORRECT ANSWER";
                 title.style.color = "var(--correct)";
                 box.style.borderColor = "var(--correct)";
                 box.style.boxShadow = "0 0 30px rgba(0, 230, 118, 0.2)";
             } else {
-                icon.innerHTML = "❌";
+                icon.innerHTML = "";
                 title.innerText = "INCORRECT";
                 title.style.color = "var(--wrong)";
                 box.style.borderColor = "var(--wrong)";
