--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1097,7 +1097,7 @@
                 
                 <div class="pyq-grid">
                     <!-- 35 Modern Cards for PYQ Categories -->
-                    <div class="pyq-card" onclick="window.open('#https://www.upsc.gov.in/sites/default/files/QP-CSM-2023.pdf', '_blank')">
+                    <div class="pyq-card" onclick="window.open('pyq-gspluscsat-english-pre.html', '_blank')">
                         <div class="pyq-icon"><i class="fas fa-calendar-alt"></i></div>
                         <div class="pyq-title">Pre=Gs+Csat</div>
                         <div class="pyq-count">2000 Questions</div>
