--- a/history-all-pyg-syllabus-subject-chaperwise-english.html
+++ b/history-all-pyg-syllabus-subject-chaperwise-english.html
@@ -648,7 +648,7 @@
         const APP_NAME = "STISkilli"; 
         
         // Editable Header Text for Stats Bar (User Request 2)
-        const HEADER_TEXT = "PYQ";
+        const HEADER_TEXT = "MCQ";
 
         const CATEGORY_TITLES = {
             ancient: "ANCIENT HISTORY",   
