--- a/pyq-gspluscsat-english-pre.html
+++ b/pyq-gspluscsat-english-pre.html
@@ -748,8 +748,8 @@
         const STATIC_HEADER_TEXT = "PYQ";
 
         const categoryBackgrounds = {
-            profile: 'indianpolity.png', ancient: 'indianpolity.png', medieval: 'indianpolity.png',
-            modern: 'indianpolity.png', world: 'indianpolity.png', art: 'indianpolity.png',
+           profile: 'skilligovtbck.png', ancient: 'anicianthistoryofindia.png', medieval: 'medivalhistoryofindia.png',
+            modern: 'modernhistoryofindia.png', world: 'worldhistory.png', art: 'artandcultureofindia.png',
             news: 'skillinewsbck.png' 
         };
 
