--- a/main.html
+++ b/main.html
@@ -403,7 +403,7 @@
     title: "ESE",
     sub: "Engineering Services",
     tag: "Technical",
-    img: "upsc.png",
+    img: "ese.png",
     linkHi: "#upsc-ese-ies-engineering-services-exam.html",
     linkEn: "upsc-ese-ies-engineering-services-exam.html"
   },
@@ -411,7 +411,7 @@
     title: "IFoS",
     sub: "Forest Service",
     tag: "Grade A",
-    img: "upsc.png",
+    img: "ifos.png",
     linkHi: "#upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html",
     linkEn: "upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html"
   },
@@ -419,7 +419,7 @@
     title: "CDS",
     sub: "Defence Services",
     tag: "Defence",
-    img: "upsc.png",
+    img: "cds.png",
     linkHi: "#ups-cds-combined-defence-dervices.html",
     linkEn: "ups-cds-combined-defence-dervices.html"
   },
@@ -427,7 +427,7 @@
     title: "NDA/NA",
     sub: "Defence Academy",
     tag: "Defence",
-    img: "upsc.png",
+    img: "nda.png",
     linkHi: "#upsc-nda-na-services.html",
     linkEn: "upsc-nda-na-services.html"
   },
@@ -435,7 +435,7 @@
     title: "CMS",
     sub: "Medical Services",
     tag: "Medical",
-    img: "upsc.png",
+    img: "cms.png",
     linkHi: "#upsc-cms-services.html",
     linkEn: "upsc-cms-services.html"
   },
@@ -443,7 +443,7 @@
     title: "IES/ISS",
     sub: "Eco & Stats",
     tag: "Specialist",
-    img: "upsc.png",
+    img: "ies.png",
     linkHi: "#upsc-ies-iss-services.html",
     linkEn: "upsc-ies-iss-services.html"
   },
@@ -451,7 +451,7 @@
     title: "CAPF",
     sub: "Armed Police",
     tag: "Paramilitary",
-    img: "upsc.png",
+    img: "capf.png",
     linkHi: "#upsc-capf-services.html",
     linkEn: "upsc-capf-services.html"
   },
@@ -459,7 +459,7 @@
     title: "CGSE",
     sub: "Geo Scientist",
     tag: "Science",
-    img: "upsc.png",
+    img: "cgse.png",
     linkHi: "#upsc-cgs-services.html",
     linkEn: "upsc-cgs-services.html"
   },
