--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1093,7 +1093,7 @@
         <div class="modal-box" style="border-color: var(--gold);">
             <div class="scroll-content upsc-container">
                 <h2 class="upsc-heading">PYQ Master Collection 📚</h2>
-                <p class="text-gray-400 text-sm mb-6">Access 35+ categories of Previous Year Questions with detailed solutions</p>
+                <p class="text-gray-400 text-sm mb-6">Access 35+ categories of Previous Year Questions of 30+ years with detailed solutions</p>
                 
                 <div class="pyq-grid">
                     <!-- 35 Modern Cards for PYQ Categories -->
@@ -1103,9 +1103,9 @@
                         <div class="pyq-count">2000 Questions</div>
                     </div>
                     
-                    <div class="pyq-card" onclick="window.open('history-all-pyg-syllabus-subject-chaperwise-english.html', '_blank')">
+                    <div class="pyq-card" onclick="window.open('history-subjectwise-all-pyg-syllabus-subject-chaperwise-english.html', '_blank')">
     <div class="pyq-icon"><i class="fas fa-landmark"></i></div>
-    <div class="pyq-title">History Over-All</div>
+    <div class="pyq-title">History Over-All-MCQ</div>
     <div class="pyq-count">3500+ Questions</div>
 </div>
 
@@ -1113,7 +1113,7 @@
 
 <div class="pyq-card" onclick="window.open('#', '_blank')">
     <div class="pyq-icon"><i class="fas fa-mountain"></i></div>
-    <div class="pyq-title">Geography-Over-All</div>
+    <div class="pyq-title">Geography-Over-All-MCQ</div>
     <div class="pyq-count">3000+ Questions</div>
 </div>
 
