Update and rename economics-pyqs-gspluscsat.html to economics-pyqs-gspluscsat-english.html

--- a/economics-pyqs-gspluscsat-english.html
+++ b/economics-pyqs-gspluscsat-english.html
@@ -596,7 +596,7 @@
                 <div class="grand-box">
                     <div class="grand-icon"></div>
                     <div class="grand-title">ULTIMATE CONQUEROR</div>
-                    <div class="grand-subtitle">HISTORY MASTER</div>
+                    <div class="grand-subtitle">POLITY MASTER</div>
                     
                     <div class="grand-scroll-container">
                         <p><strong>Congratulations!</strong> You have successfully navigated the corridors of time. From the ancient roots of civilization to the complexities of the modern world, and through the vibrant expressions of art and culture, you have proven your mastery.</p>
@@ -608,7 +608,7 @@
 
                     <div class="grand-btn-group">
                         <button class="grand-btn-primary" onclick="restartJourney()">START AGAIN</button>
-                        <button class="grand-btn-secondary" onclick="window.location.href='indian-polity-pyqs-gspluscsat.html'">START ECONOMICS</button>
+                        <button class="grand-btn-secondary" onclick="window.location.href='economics-pyqs-gspluscsat-english.html'">START ECONOMICS</button>
                     </div>
                 </div>
             </div>
