--- a/economics-pyqs-gspluscsat-english.html
+++ b/economics-pyqs-gspluscsat-english.html
@@ -596,7 +596,7 @@
                 <div class="grand-box">
                     <div class="grand-icon"></div>
                     <div class="grand-title">ULTIMATE CONQUEROR</div>
-                    <div class="grand-subtitle">POLITY MASTER</div>
+                    <div class="grand-subtitle">ECONOMICS MASTER</div>
                     
                     <div class="grand-scroll-container">
                         <p><strong>Congratulations!</strong> You have successfully navigated the corridors of time. From the ancient roots of civilization to the complexities of the modern world, and through the vibrant expressions of art and culture, you have proven your mastery.</p>
