--- a/main.html
+++ b/main.html
@@ -421,7 +421,7 @@
     tag: "Defence",
     img: "cds.png",
     linkHi: "#ups-cds-combined-defence-dervices.html",
-    linkEn: "ups-cds-combined-defence-dervices.html"
+    linkEn: "#ups-cds-combined-defence-dervices.html"
   },
   {
     title: "NDA/NA",
@@ -429,7 +429,7 @@
     tag: "Defence",
     img: "nda.png",
     linkHi: "#upsc-nda-na-services.html",
-    linkEn: "upsc-nda-na-services.html"
+    linkEn: "#upsc-nda-na-services.html"
   },
   {
     title: "CMS",
@@ -437,7 +437,7 @@
     tag: "Medical",
     img: "cms.png",
     linkHi: "#upsc-cms-services.html",
-    linkEn: "upsc-cms-services.html"
+    linkEn: "#upsc-cms-services.html"
   },
   {
     title: "IES/ISS",
@@ -445,7 +445,7 @@
     tag: "Specialist",
     img: "ies.png",
     linkHi: "#upsc-ies-iss-services.html",
-    linkEn: "upsc-ies-iss-services.html"
+    linkEn: "#upsc-ies-iss-services.html"
   },
   {
     title: "CAPF",
@@ -453,7 +453,7 @@
     tag: "Paramilitary",
     img: "capf.png",
     linkHi: "#upsc-capf-services.html",
-    linkEn: "upsc-capf-services.html"
+    linkEn: "#upsc-capf-services.html"
   },
   {
     title: "CGSE",
@@ -461,7 +461,7 @@
     tag: "Science",
     img: "cgse.png",
     linkHi: "#upsc-cgs-services.html",
-    linkEn: "upsc-cgs-services.html"
+    linkEn: "#upsc-cgs-services.html"
   },
   {
     title: "EPFO",
@@ -469,7 +469,7 @@
     tag: "Group A/B",
     img: "upsc.png",
     linkHi: "#upsc-epfo-eo-oa-services.html",
-    linkEn: "upsc-epfo-eo-oa-services.html"
+    linkEn: "#upsc-epfo-eo-oa-services.html"
   },
   {
     title: "CISF AC",
@@ -477,7 +477,7 @@
     tag: "Departmental",
     img: "upsc.png",
     linkHi: "#upsc-cisf-acexe-ldce-service.html",
-    linkEn: "upsc-cisf-acexe-ldce-service.html"
+    linkEn: "#upsc-cisf-acexe-ldce-service.html"
   },
   {
     title: "SO/Steno",
@@ -485,7 +485,7 @@
     tag: "Departmental",
     img: "upsc.png",
     linkHi: "#upsc-so-steno-grade-b-grade-i-ldce-services.html",
-    linkEn: "upsc-so-steno-grade-b-grade-i-ldce-services.html"
+    linkEn: "#upsc-so-steno-grade-b-grade-i-ldce-services.html"
   },
   {
     title: "CBI DSP",
@@ -493,7 +493,7 @@
     tag: "Departmental",
     img: "upsc.png",
     linkHi: "#upsc-cbi-dsp-limited-dept-service.html",
-    linkEn: "upsc-cbi-dsp-limited-dept-service.html"
+    linkEn: "#upsc-cbi-dsp-limited-dept-service.html"
   },
   {
     title: "SCRA",
@@ -501,7 +501,7 @@
     tag: "Technical",
     img: "upsc.png",
     linkHi: "#upsc-special-class-railway-apprentice-scra-services.html",
-    linkEn: "upsc-special-class-railway-apprentice-scra-services.html"
+    linkEn: "#upsc-special-class-railway-apprentice-scra-services.html"
   }
 ],
        
