--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1254,7 +1254,7 @@
                         <div class="pyq-count">2000 Questions</div>
                     </div>
                     
-                    <div class="pyq-card" onclick="window.open('#history-subjectwise-all-pyg-syllabus-subject-chaperwise-english.html', '_blank')">
+                    <div class="pyq-card" onclick="window.open('history-subjectwise-all-pyg-syllabus-subject-chaperwise-english.html', '_blank')">
     <div class="pyq-icon"><i class="fas fa-landmark"></i></div>
     <div class="pyq-title">History Complete-MCQ</div>
     <div class="pyq-count">3500+ Questions</div>
