--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <body>
 
     <!-- 1. HD Image Background (Same as STISoul) -->
-    <img id="bg-image" src="" alt="Divine Universe Background">
+    <img id="bg-image" src="" alt="">
     
     <div class="image-overlay"></div>
 
@@ -192,7 +192,7 @@
 
     <script>
         // ORIGINAL DATA PRESERVED
-        const REDIRECT_URL = 'https://crapd.in/main.html';
+        const REDIRECT_URL = '/main.html';
         const DURATION = 3500; 
         const HAS_VISITED_KEY = 'hasVisitedSkilli';
 
@@ -228,7 +228,7 @@
                     requestAnimationFrame(loadLoop);
                 } else {
                     // Final State
-                    status.innerText = "Ready";
+                    status.innerText = "Welcome";
                     status.style.color = "#FFF";
                     status.style.letterSpacing = "0.5em";
                     
